# rcppuuid

./: .Rbuildignore  .appveyor.yml  .covrignore  .gitignore  .gitlab-ci.yml  CRAN-SUBMISSION  ChangeLog  DESCRIPTION  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  cleanup  configure  configure.ac
R/: RcppExports.R  RcppUUID-package.R  uuid.R
inst/: COPYRIGHTS  NEWS.Rd
inst/include/: uuid.h
inst/tinytest/: test-generate.R  test-uuid.R  test-validate.R
man/: RcppUUID.Rd  uuid.Rd  uuid_generate.Rd  uuid_generate_name.Rd  uuid_generate_nil.Rd  uuid_generate_time.Rd  uuid_validate.Rd
old/: .gitlab-ci.yml  CRAN-SUBMISSION  README.Rmd  _pkgdown.yml  cran-comments.md
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  uuid.cpp  uuid_name.cpp  uuid_nil.cpp  uuid_random.cpp  uuid_time.cpp  uuid_valid.cpp  wrap.cpp
